--- a/style.css
+++ b/style.css
@@ -1,27 +1,36 @@
+
+
 header{
 background-color: black;  
 height: auto;  
-color: aqua;
+color: rgb(255, 255, 255);
 text-align:center;
-font-size:30px;
-font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+font-size:40px;
+font-family:Georgia, 'Times New Roman', Times, serif;
 
 }
 
 .main{
-    background-color: rgb(65, 2, 2); 
-    height: auto;   
+    background-color: rgb(49, 11, 11); 
+    height: auto;  
+    width: auto; 
  
 }
 
 .navtopli{
     display:inline-block;
-    padding: 2%;
+    padding: 3%;
+    align-content:center;
 }
 
 footer{
-    background-color: rgb(2, 2, 63);
-    height: 200px;
+  display:flex;  
+  background-color: rgb(31, 2, 11);
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    height: auto;
+    color:white;
+    flex-direction: row-reverse;
+    justify-content: space-between;
 }
 
 *,
@@ -34,5 +43,12 @@ footer{
 
 .landingpage{
     display:grid;
-    grid-template-columns: 1fr 2fr;
-}
+        grid-template-columns: 650px 75%;
+    color: white;
+    font-size: 40px;
+    align-content: center;
+
+  }
+
+
+
