--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ flex-shrink:0;
   display: grid;
   grid-template-columns: 50% 50%;
   width: 500px;
-  height: auto;
+  height:auto;
   background-color: ;
 }
 
@@ -69,7 +69,7 @@ flex-shrink:0;
   display: grid;
   grid-template-columns: 50% 50%;
   width: 500px;
-  height: auto;
+  height:auto;
   background-color: ;
 
   
@@ -86,6 +86,9 @@ flex-shrink:0;
   height:auto;
   border-color: rgb(0, 0, 0) ;
   border-style:groove;
+  button:hover{
+    background-color: blue;
+  }
     
 }
 
@@ -141,3 +144,4 @@ flex-shrink:0;
     padding: 0;
     box-sizing: border-box;
   }  
+
