--- a/style.css
+++ b/style.css
@@ -9,19 +9,16 @@ grid-template-columns: 1fr 1fr;
 grid-template-rows: 1fr 1fr;
 grid-template-areas:
 "headers image" 
-"buttons image"
-;
-
-
+"buttons image";
 }
 
 
 .maintext{
 background-color: rgb(5, 100, 80);
 width:100%;
+height:80%;
 justify-content: center;
-grid-template-columns: 1fr 1fr 1fr;
-grid-area: headers;  
+grid-template-columns: 1fr;
 }
 
 .landingpage{
@@ -31,7 +28,6 @@ grid-area: headers;
 }
 
 
-
 .header1{
   color: white;
   font-family: Georgia, 'Times New Roman', Times, serif;
@@ -39,8 +35,7 @@ grid-area: headers;
   font-size: 100px;
   justify-content: center;
   text-align: center;
- 
-}
+ }
 
 .header2{
   color:white;
@@ -49,44 +44,46 @@ grid-area: headers;
   font-size: 30px;
   text-align: center;
   padding:15%;
-  
 }
 
 .button-box{
 display:grid;
 grid-template-columns: 1fr 1fr;
-grid-template-rows: 1fr 1fr ;
 justify-content: center;
-grid-area: buttons;
-
+grid-gap:20px;
+padding:20px;
 }
 
-.about{
-  grid-area:about;
-}
 
-.button {
+
+button {
 color:black;
 font-family:Georgia, 'Times New Roman', Times, serif;
 font-weight: bold;
 font-size: 40px;
 padding: 8px;
 background-color: white;
-width: auto;
+width: 400px;
 height:80px;
 border-color: rgb(0, 0, 0) ;
 border-radius: 22%;
 margin: 25px 0;
 justify-content: center;
+} 
+
+
+button:hover {
+  background-color:rgb(80, 7, 7);
+  box-shadow: 10px 5px 5px rgb(27, 26, 26);
+  color:white;
 }
 
-
-
-
-
-button:hover{
-  background-color: black;
-  color: white;
+a{
+  color:black;
+  text-decoration: none;
 }
 
-
+a:hover{
+color:white;
+text-decoration: none;
+}
