--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ justify-content: center;
 
 button:hover {
   background-color:rgb(80, 7, 7);
-  box-shadow: 10px 5px 5px rgb(27, 26, 26);
+  box-shadow: 25px -10px rgb(243, 237, 237);
   color:white;
 }
 
